// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dbux-babel-plugin astInjectAtRoot.es5.js: astInjectAtRoot.es5.js 1`] = `
"
/* #################################################################################### */

function f2() {
  AddCustomCode();
  AddCustomCode();
}
f2();
f2();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

someFancyCodeHere();

/* #################################################################################### */
function f2() {
  AddCustomCode();
  AddCustomCode();
}

f2();
f2();
"
`;

exports[`dbux-babel-plugin astInjectAtRoot.es5.js: astInjectAtRoot.es5.js 2`] = `
"
/* #################################################################################### */

function f1() {
  console.log('hi');
}

f1();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

/* #################################################################################### */
function f1() {
  console.log('hi');
}

f1();
"
`;

exports[`dbux-babel-plugin astInjectAtRoot.esNext.js: astInjectAtRoot.esNext.js 1`] = `
"
/* #################################################################################### */

function f2() {
  AddCustomCode();
  AddCustomCode();
}
f2();
f2();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

/* #################################################################################### */
function f2() {
  AddCustomCode();
  AddCustomCode();
}

f2();
f2();
"
`;

exports[`dbux-babel-plugin astInjectAtRoot.esNext.js: astInjectAtRoot.esNext.js 2`] = `
"
/* #################################################################################### */

function f1() {
  console.log('hi');
}

f1();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

/* #################################################################################### */
function f1() {
  console.log('hi');
}

f1();
"
`;
